# opperai-agent-sdk

./: AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  REBUILD_SPEC.md  SUCCESS_CRITERIA.md  coordinator_flow.md  deep_research_agent.py  docs_flow.md  docs_tools.md  hello.py  math_agent_flow.md  pyproject.toml  requirements.txt  search_agent_flow.md  tools.py
.github/workflows/: beta-release.yml  validate-pr.yml
examples/: advanced_workflow_example.py  agent_as_tool.py  agent_with_memory.py  chatbot_agent.py  chef_agent.py  combined_tool_flow.py  composio_gmail_mcp.py  demo_workflow.py  dual_mode_example.py  event_callback_example.py  flow_mode_example.py  math_agent_example.py  mcp_example.py  multi_agent_example.py  quick_test_hooks.py  quick_test_schemas.py  rfp_agent.py  step_decorator_example.py  test_mcp_debug.py  tools_mode_example.py  weather_conversation_example.py
examples/01_getting_started/: 01_first_agent.py  02_agent_as_tool.py  03_user_input_tool.py  04_enable_memory.py  05_hooks.py  06_pydantic_tool_example.py  07_streaming_output.py  token_usage_hook.py
examples/02_mcp_examples/: 01_basic_mcp.py  03_composio_gmail_csv_download.py  04_composio_gmail_excel_download.py  composio_gmail_mcp.py
examples/applied_agents/: 01_math_agent.py  02_weather_conversation_example.py  03_multi_agent_example.py  daily_digest_agent.py  deep_research_agent.py  deep_research_agent_composio.py
examples/custom_agents/: 01_react_math_agent.py  02_react_research_agent.py  03_chat_assistant.py
scripts/: run-examples.py
tests/: conftest.py
(+66 files in other folders)
