[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[project]
name = "opper-agent-sdk"
version = "0.1.0"
description = "Opper-based agent workflows SDK (Mastra-style control flow)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Opper" }]
dependencies = [
  "pydantic>=2.6.0",
  "opperai>=0.3.0",
  "rich>=13.7.0",
  "typing-extensions>=4.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opper_agent"]
