[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[project]
name = "opper-agent-sdk"
version = "0.1.0"
description = "Opper-based agent workflows SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Opper" }]
dependencies = [
  "pydantic>=2.6.0",
  "opperai>=0.3.0",
  "rich>=13.7.0",
  "typing-extensions>=4.9.0",
  "mcp>=1.14.0",
]

[project.optional-dependencies]
mcp = [
  "aiohttp>=3.8.0", # Required for HTTP-based MCP servers
]
composio = [
  "composio>=0.5.0", # Required for Composio tool integrations
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opper_agent"]
